tests/kubernetes/custom-5.2.1/compliant/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: compliant-sa
  annotations:
    iam.gke.io/gcp-service-account: "gke-workload@cis-gke-compliant.iam.gserviceaccount.com"
